# python-ai-template

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/agents/: documenter.md  implementer.md  scout.md
.opencode/commands/: decision.md  mistake.md  verify.md
.opencode/skills/python-quality/: SKILL.md
docs/: architecture.md  current-state.md  decisions.md  glossary.md  mistakes.md  todos.md
docs/ai/: context-policy.md  evaluations.md  model-policy.md
src/python_ai_template/: __init__.py  cli.py  generator.py
src/python_ai_template/template/: AGENTS.md  opencode.jsonc
src/python_ai_template/template/.opencode/agents/: reviewer.md  scout.md
src/python_ai_template/template/.opencode/commands/: compact-test.md  handoff.md  review.md  verify.md
src/python_ai_template/template/.opencode/plugins/: structured-compaction.ts
src/python_ai_template/template/docs/: architecture.md  current-state.md  decisions.md  glossary.md  mistakes.md
template/: README.md.tmpl  pyproject.toml.tmpl
template/.opencode/: .gitignore
template/.opencode/agents/: debugger.md  implementer.md
template/.opencode/commands/: handoff.md
template/.opencode/skills/architecture-review/: SKILL.md
template/docs/: todos.md
template/docs/ai/: evaluations.md
template/src/__package_name__/: __init__.py.tmpl
template/tests/: test_smoke.py.tmpl
tests/: test_new_project.py  test_record_evaluation.py  test_verify_opencode.py  test_verify_wheel.py
tools/: new_project.py
tools/ai/: record_evaluation.py  verify.py  verify_opencode.py  verify_wheel.py
(+3 files in other folders)
