[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-ai-template"
version = "0.1.0"
description = "Generador de proyectos Python compatibles con el stack de desarrollo asistido por IA."
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "ruff",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["tests", "tools"]
extraPaths = ["tools"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["tools"]
