[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-ai-template"
version = "0.3.1"
description = "Generador de proyectos Python compatibles con el stack de desarrollo asistido por IA."
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
new-python-project = "python_ai_template.cli:main"

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python_ai_template"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
